crates/oxc_css_parser/tests/error/at-rule/at-digit.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: unknown token
  ┌─ at-digit.css:1:1
  │
1 │ @3: red;
  │ ^
